The piechart now shimmers while loading as well

--- a/app/src/main/res/layout/referrals_header.xml
+++ b/app/src/main/res/layout/referrals_header.xml
@@ -17,16 +17,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="349 kr" />
 
-    <com.hedvig.app.feature.referrals.ui.PieChartView
-        android:id="@+id/piechart"
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/piechartPlaceholder"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/base_margin_septuple"
-        android:layout_marginTop="@dimen/base_margin"
-        android:layout_marginEnd="@dimen/base_margin_septuple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/grossPrice" />
+        app:layout_constraintTop_toBottomOf="@id/grossPrice">
+
+        <com.hedvig.app.feature.referrals.ui.PieChartView
+            android:id="@+id/piechart"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/base_margin_septuple"
+            android:layout_marginTop="@dimen/base_margin"
+            android:layout_marginEnd="@dimen/base_margin_septuple" />
+
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/emptyTexts"
@@ -47,7 +54,7 @@
         android:textAppearance="?textAppearanceHeadline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/piechart" />
+        app:layout_constraintTop_toBottomOf="@id/piechartPlaceholder" />
 
     <TextView
         android:id="@+id/emptyBody"
@@ -93,7 +100,7 @@
         android:text="@string/referrals_active.discount.per.month.title"
         android:textAppearance="?textAppearanceBody2"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/piechart" />
+        app:layout_constraintTop_toBottomOf="@id/piechartPlaceholder" />
 
     <TextView
         android:id="@+id/discountPerMonth"
