--- a/app/src/main/res/values/colors_light.xml
+++ b/app/src/main/res/values/colors_light.xml
@@ -10,7 +10,7 @@
     <item name="colorSurface" type="color">@color/hedvig_white</item>
     <item name="colorOnSurface" type="color">@color/colorPrimary</item>
     <item name="colorSurfaceOnSurface" type="color">#EAEAEA</item>
-    <item name="colorSecondary" type="color">#C9ABF5</item>
+    <item name="colorSecondary" type="color">@color/lavender_300</item>
     <item name="colorOnSecondary" type="color">@color/hedvig_white</item>
     <item name="colorPlaceholder" type="color">#57121212</item>
 
@@ -21,13 +21,15 @@
     <item name="textColorThird" type="color">#8F121212</item>
 
     <item name="colorButton" type="color">@color/colorPrimary</item>
-    <item name="textColorLink" type="color">#875EC5</item>
+    <item name="textColorLink" type="color">@color/lavender_600</item>
     <item name="textColorLargeButton" type="color">@color/colorPrimary</item>
 
     <item name="colorBackgroundChat" type="color">@color/hedvig_off_white</item>
     <item name="colorChatUserBackground" type="color">@color/hedvig_light_gray</item>
     <item name="colorChatHedvigBackground" type="color">@color/white</item>
     <item name="colorChatInputButton" type="color">@color/hedvig_light_gray</item>
+
+    <item name="colorInfoCardSurface" type="color">@color/lavender_100</item>
 
     <!-- Compatibility with Adyen -->
     <item name="primaryColor" type="color">@color/colorPrimary</item>
