--- a/app/src/main/res/values/widget_themes.xml
+++ b/app/src/main/res/values/widget_themes.xml
@@ -29,4 +29,8 @@
         <item name="colorSurface">@color/colorSurfaceOnSurface</item>
     </style>
 
+    <style name="ThemeOverlay.Hedvig.InfoCard" parent="">
+        <item name="colorSurface">@color/colorInfoCardSurface</item>
+    </style>
+
 </resources>
