--- a/app/src/main/res/layout/referrals_header.xml
+++ b/app/src/main/res/layout/referrals_header.xml
@@ -63,12 +63,12 @@
         android:layout_marginStart="@dimen/base_margin_triple"
         android:layout_marginTop="@dimen/base_margin_double"
         android:layout_marginEnd="@dimen/base_margin_triple"
-        android:text="@string/referrals_empty.body"
         android:textAlignment="center"
         android:textAppearance="?textAppearanceBody1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emptyHeadline" />
+        app:layout_constraintTop_toBottomOf="@id/emptyHeadline"
+        tools:text="@string/referrals_empty.body" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/nonEmptyTexts"
