--- a/app/src/main/res/layout/activity_referrals_information.xml
+++ b/app/src/main/res/layout/activity_referrals_information.xml
@@ -42,15 +42,16 @@
                 android:textAppearance="?textAppearanceHeadline5" />
 
             <TextView
+                android:id="@+id/body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin_double"
                 android:layout_marginEnd="@dimen/base_margin_double"
-                android:text="@string/referrals_info_sheet.body"
                 android:textAlignment="center"
-                android:textAppearance="?textAppearanceBody1" />
+                android:textAppearance="?textAppearanceBody1"
+                tools:text="@string/referrals_info_sheet.body" />
 
             <Button
                 android:id="@+id/termsAndConditions"
