--- a/app/src/main/res/layout/activity_referrals_activated.xml
+++ b/app/src/main/res/layout/activity_referrals_activated.xml
@@ -5,7 +5,7 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature.referrals.ui.ReferralsActivatedActivity">
+    tools:context=".feature.referrals.ui.activated.ReferralsActivatedActivity">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
@@ -42,25 +42,85 @@
                 android:text="@string/referrals_intro_screen.title"
                 android:textAlignment="center"
                 android:textAppearance="?textAppearanceHeadline5"
-                app:layout_constraintBottom_toTopOf="@id/body"
+                app:layout_constraintBottom_toTopOf="@id/bodyContainer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/illustration" />
 
-            <TextView
-                android:id="@+id/body"
+            <FrameLayout
+                android:id="@+id/bodyContainer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_triple"
                 android:layout_marginTop="@dimen/base_margin_double"
                 android:layout_marginEnd="@dimen/base_margin_triple"
-                android:text="@string/referrals_intro_screen.body"
-                android:textAlignment="center"
-                android:textAppearance="?textAppearanceBody1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/title" />
+                app:layout_constraintTop_toBottomOf="@id/title">
+
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/bodyPlaceholder"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:visibility="gone">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/body_1_placeholder_height"
+                            android:contentDescription="@null"
+                            app:srcCompat="@drawable/placeholder_rectangle" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/body_1_placeholder_height"
+                            android:layout_marginStart="@dimen/base_margin_double"
+                            android:layout_marginTop="@dimen/body_1_placeholder_line_space"
+                            android:layout_marginEnd="@dimen/base_margin_double"
+                            android:contentDescription="@null"
+                            app:srcCompat="@drawable/placeholder_rectangle" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/body_1_placeholder_height"
+                            android:layout_marginStart="@dimen/base_margin"
+                            android:layout_marginTop="@dimen/body_1_placeholder_line_space"
+                            android:layout_marginEnd="@dimen/base_margin"
+                            android:contentDescription="@null"
+                            app:srcCompat="@drawable/placeholder_rectangle" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/body_1_placeholder_height"
+                            android:layout_marginStart="@dimen/base_margin_septuple"
+                            android:layout_marginTop="@dimen/body_1_placeholder_line_space"
+                            android:layout_marginEnd="@dimen/base_margin_septuple"
+                            android:contentDescription="@null"
+                            app:srcCompat="@drawable/placeholder_rectangle" />
+
+                    </LinearLayout>
+
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <TextView
+                    android:id="@+id/body"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:alpha="0"
+                    android:textAlignment="center"
+                    android:textAppearance="?textAppearanceBody1"
+                    android:visibility="gone"
+                    tools:alpha="1"
+                    tools:text="@string/referrals_intro_screen.body"
+                    tools:visibility="visible" />
+
+            </FrameLayout>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
