--- a/app/src/main/res/values/text_themes.xml
+++ b/app/src/main/res/values/text_themes.xml
@@ -7,6 +7,7 @@
 
     <dimen name="body_1_placeholder_width">48sp</dimen>
     <dimen name="body_1_placeholder_height">16sp</dimen>
+    <dimen name="body_1_placeholder_line_space">8sp</dimen>
 
     <style name="Hedvig.TextAppearance.Body2" parent="TextAppearance.MaterialComponents.Body2">
         <item name="lineHeight">20sp</item>
