--- a/app/src/main/res/layout/offer_terms_area.xml
+++ b/app/src/main/res/layout/offer_terms_area.xml
@@ -8,24 +8,14 @@
     android:orientation="vertical"
     android:paddingHorizontal="@dimen/base_margin_double">
 
-    <LinearLayout
+    <TextView
+        style="?textAppearanceBody1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_my_documents" />
-
-        <TextView
-            style="?textAppearanceBody1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/base_margin_double"
-            android:layout_marginEnd="@dimen/base_margin_double"
-            android:text="@string/OFFER_SCREEN_INSURED_AMOUNTS_TITLE" />
-    </LinearLayout>
+        android:layout_marginEnd="@dimen/base_margin_double"
+        android:drawableStart="@drawable/ic_my_documents"
+        android:drawablePadding="@dimen/base_margin_double"
+        android:text="@string/OFFER_SCREEN_INSURED_AMOUNTS_TITLE" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/insurableLimits"
@@ -49,7 +39,7 @@
         android:orientation="vertical" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/termsRecyclerView"
+        android:id="@+id/termsDocuments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
