Development scaffolding + more complete re-implementation

--- a/app/src/main/res/layout/offer_info_area.xml
+++ b/app/src/main/res/layout/offer_info_area.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:parentTag="android.widget.LinearLayout">
 
     <LinearLayout
@@ -106,4 +108,4 @@
         </LinearLayout>
 
     </LinearLayout>
-</merge>
+</LinearLayout>
