--- a/app/src/main/res/values-v29/styles.xml
+++ b/app/src/main/res/values-v29/styles.xml
@@ -13,6 +13,14 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
+    <style name="Hedvig.Theme.Offer.V29" parent="Hedvig.Theme.Offer.V27">
+        <item name="android:navigationBarColor">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
+
+    <style name="Hedvig.Theme.Offer" parent="Hedvig.Theme.Offer.V29" />
+
     <style name="Hedvig.Theme.KeyGear.ItemDetail">
         <item name="android:windowLightStatusBar">false</item>
         <item name="colorControlNormal">@color/white</item>
