--- a/app/src/main/res/layout/activity_offer.xml
+++ b/app/src/main/res/layout/activity_offer.xml
@@ -14,7 +14,8 @@
         android:clipToPadding="false"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="1"
-        tools:listitem="@layout/offer_header" />
+        tools:listitem="@layout/offer_header"
+        tools:paddingTop="?attr/actionBarSize" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/offerToolbar"
