--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -1,13 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?><!-- TODO: This top margin seems wrong. Maybe it should be adjusted. -->
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/hedvig_black"
-    android:paddingTop="@dimen/base_margin_octuple"
     android:paddingBottom="@dimen/base_margin_quadruple">
 
-    <com.hedvig.app.ui.view.HedvigCardView xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <com.hedvig.app.ui.view.HedvigCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/base_margin_double">
