--- a/app/src/main/res/values/theme.xml
+++ b/app/src/main/res/values/theme.xml
@@ -55,9 +55,9 @@
         <item name="bottomSheetDialogTheme">@style/Hedvig.Theme.BottomSheetDialog</item>
         <item name="textInputStyle">@style/Hedvig.Theme.TextInputLayout</item>
 
-        <item name="android:windowBackground">@color/colorBackground</item>
+        <item name="android:windowBackground">?android:colorBackground</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-        <item name="android:statusBarColor">@color/colorBackground</item>
+        <item name="android:statusBarColor">?android:colorBackground</item>
         <item name="materialAlertDialogTheme">@style/AlertDialog</item>
     </style>
 
