--- a/app/src/main/res/layout/activity_referrals_edit_code.xml
+++ b/app/src/main/res/layout/activity_referrals_edit_code.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".feature.referrals.ui.editcode.ReferralsEditCodeActivity">
@@ -31,7 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_triple"
-                android:layout_marginTop="@dimen/base_margin_double"
+                android:layout_marginTop="@dimen/base_margin_triple"
                 android:layout_marginEnd="@dimen/base_margin_triple"
                 android:text="@string/referrals_change_code_sheet.body"
                 android:textAlignment="center"
@@ -42,7 +44,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin_quintuple"
-                android:layout_marginEnd="@dimen/base_margin_double">
+                android:layout_marginEnd="@dimen/base_margin_double"
+                android:layout_marginBottom="@dimen/base_margin_double">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/code"
@@ -60,6 +63,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:navigationIcon="@drawable/ic_back"
         tools:layout_height="?actionBarSize" />
 
 </FrameLayout>
