--- a/app/src/main/res/layout/activity_referrals_edit_code.xml
+++ b/app/src/main/res/layout/activity_referrals_edit_code.xml
@@ -63,7 +63,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:navigationIcon="@drawable/ic_back"
+        app:navigationIcon="@drawable/ic_close"
         tools:layout_height="?actionBarSize" />
 
 </FrameLayout>
