--- a/app/src/main/res/layout/activity_referrals_edit_code.xml
+++ b/app/src/main/res/layout/activity_referrals_edit_code.xml
@@ -10,7 +10,8 @@
     <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:paddingTop="?actionBarSize">
 
         <LinearLayout
             android:id="@+id/scrollViewContent"
@@ -59,10 +60,11 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <androidx.appcompat.widget.Toolbar
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:menu="@menu/referrals_edit_code_menu"
         app:navigationIcon="@drawable/ic_close"
         tools:layout_height="?actionBarSize" />
 
