A generic error is now shown if a network error occurs after submitting, or when a GraphQL error occurs

--- a/app/src/main/res/layout/activity_referrals_edit_code.xml
+++ b/app/src/main/res/layout/activity_referrals_edit_code.xml
@@ -41,12 +41,14 @@
                 android:textAppearance="?textAppearanceBody1" />
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/codeContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/base_margin_double"
                 android:layout_marginTop="@dimen/base_margin_quintuple"
                 android:layout_marginEnd="@dimen/base_margin_double"
-                android:layout_marginBottom="@dimen/base_margin_double">
+                android:layout_marginBottom="@dimen/base_margin_double"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/code"
