Referral Tab now supports Pull to Refresh

--- a/app/src/main/res/layout/fragment_referrals.xml
+++ b/app/src/main/res/layout/fragment_referrals.xml
@@ -6,15 +6,22 @@
     android:layout_height="match_parent"
     tools:context="com.hedvig.app.feature.referrals.ui.tab.ReferralsFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/invites"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeToRefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingBottom="@dimen/base_margin_quintuple"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="3"
-        tools:listitem="@layout/referrals_row" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/invites"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="@dimen/base_margin_quintuple"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="3"
+            tools:listitem="@layout/referrals_row" />
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <Button
         android:id="@+id/share"
