--- a/app/src/main/res/layout/referrals_header.xml
+++ b/app/src/main/res/layout/referrals_header.xml
@@ -25,7 +25,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/grossPrice">
 
-        <com.hedvig.app.feature.referrals.ui.PieChartView
+        <com.hedvig.app.feature.referrals.ui.tab.PieChartView
             android:id="@+id/piechart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
