Bonus: Save is now disabled until you actually change the code in the text field

--- a/app/src/main/res/menu/referrals_edit_code_menu.xml
+++ b/app/src/main/res/menu/referrals_edit_code_menu.xml
@@ -5,5 +5,6 @@
         android:id="@+id/save"
         android:orderInCategory="1"
         app:showAsAction="always|withText"
+        android:enabled="false"
         android:title="@string/nav_bar.save" />
 </menu>
