--- a/app/src/main/res/layout/activity_referrals_edit_code.xml
+++ b/app/src/main/res/layout/activity_referrals_edit_code.xml
@@ -55,7 +55,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="@string/referrals_change_code_sheet.input_hint"
-                    android:imeOptions="actionDone" />
+                    android:imeOptions="actionDone"
+                    android:inputType="textNoSuggestions"
+                    android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
