--- a/app/src/main/res/layout/activity_referrals_edit_code.xml
+++ b/app/src/main/res/layout/activity_referrals_edit_code.xml
@@ -56,6 +56,7 @@
                     android:layout_height="match_parent"
                     android:hint="@string/referrals_change_code_sheet.input_hint"
                     android:imeOptions="actionDone"
+                    android:importantForAutofill="no"
                     android:inputType="textNoSuggestions"
                     android:maxLines="1" />
 
