Finish implementing switcher section

--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -71,39 +71,49 @@
 
             </LinearLayout>
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/startDateContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/base_margin_double"
                 android:background="@drawable/background_pick_date"
-                android:drawableEnd="@drawable/ic_expand"
-                android:gravity="center"
-                android:orientation="horizontal"
                 android:padding="@dimen/base_margin">
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:id="@+id/startDateLabel"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:text="@string/START_DATE_BTN"
-                    android:textAppearance="?textAppearanceBody1" />
+                    android:textAppearance="?textAppearanceBody1"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/startDate"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/base_margin_double"
                     android:layout_marginEnd="@dimen/base_margin_double"
+                    android:textAlignment="textEnd"
                     android:textAppearance="?textAppearanceBody1"
-                    tools:text="Idag" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/startDateExpandIcon"
+                    app:layout_constraintStart_toEndOf="@id/startDateLabel"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="@string/ACTIVATE_INSURANCE_END_BTN" />
 
                 <ImageView
+                    android:id="@+id/startDateExpandIcon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:contentDescription="@null"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/ic_expand" />
 
-            </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <Button
                 android:id="@+id/sign"
