- `ChangeDateBottomSheet` now dismisses properly We were accidentally using `hide()`, which caused the bottom sheet to reappear when the activity resumed, because the dialogfragment never actually disappeared - The theme now looks correct on API levels 27 and 28

--- a/app/src/main/res/layout/offer_switch.xml
+++ b/app/src/main/res/layout/offer_switch.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="?android:colorBackground">
+    android:background="?android:colorBackground"
+    android:paddingBottom="@dimen/base_margin_quadruple">
 
     <TextView
         android:id="@+id/switchTitle"
