--- a/app/src/main/res/values-v27/styles.xml
+++ b/app/src/main/res/values-v27/styles.xml
@@ -11,9 +11,10 @@
     <style name="Hedvig.Theme.Offer.V27" parent="Hedvig.Theme.Offer.V23">
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowLightNavigationBar">false</item>
+        <item name="android:navigationBarColor">@color/hedvig_black</item>
     </style>
 
-    <style name="Hedvig.Theme.Offer" parent="Hedvig.Theme.V27" />
+    <style name="Hedvig.Theme.Offer" parent="Hedvig.Theme.Offer.V27" />
 
     <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="android:statusBarColor">@android:color/transparent</item>
