Bonus: Fix the icon color on large contained buttons being incorrect

--- a/app/src/main/res/layout/offer_header.xml
+++ b/app/src/main/res/layout/offer_header.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/hedvig_black"
-    android:paddingBottom="@dimen/base_margin_quadruple">
+    android:paddingBottom="@dimen/base_margin_quadruple"
+    tools:context=".feature.offer.ui.OfferActivity">
 
     <com.hedvig.app.ui.view.HedvigCardView
         android:layout_width="match_parent"
