--- a/app/src/main/res/values/button_themes.xml
+++ b/app/src/main/res/values/button_themes.xml
@@ -12,6 +12,7 @@
         <item name="android:padding">@dimen/base_margin_double</item>
         <item name="shapeAppearance">?shapeAppearanceLargeComponent</item>
         <item name="android:textColor">@color/hedvig_large_button_text_color_selector</item>
+        <item name="iconTint">@color/hedvig_large_button_text_color_selector</item>
     </style>
 
     <style name="Hedvig.Button.Text" parent="Widget.MaterialComponents.Button.TextButton">
